Fixed button misaligned

--- a/imcger/imgupload/styles/all/theme/imgupload.css
+++ b/imcger/imgupload/styles/all/theme/imgupload.css
@@ -21,6 +21,6 @@
 	padding-top: 1em;
 }
 
-input.button2 {
+.attach-controls input.button2 {
 	margin-bottom: 5px;
 }
